--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -52,6 +52,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:onClick="saveSettingsFab_Action"
         app:backgroundTint="@color/spetia"
         app:elevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
