--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -134,9 +134,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        android:onClick="onButtonClick_saveContents2"
         app:backgroundTint="@color/spetia"
         app:elevation="20dp"
         app:srcCompat="@drawable/baseline_save_24" />
+<!--    android:onClick="onButtonClick_saveContents2"-->
 
 </RelativeLayout>
