--- a/app/src/main/res/layout/home_fragment_top_bar.xml
+++ b/app/src/main/res/layout/home_fragment_top_bar.xml
@@ -17,34 +17,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/homeFragmentTopBarProfileImage"
-                android:layout_width="105dp"
-                android:layout_height="95dp"
-                android:padding="5dp"
+<!--            <ImageView-->
+<!--                android:id="@+id/homeFragmentTopBarProfileImage"-->
+<!--                android:layout_width="105dp"-->
+<!--                android:layout_height="95dp"-->
+<!--                android:padding="5dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintVertical_bias="0.0"-->
+<!--                app:shapeAppearanceOverlay="@style/circular"-->
+<!--                app:srcCompat="@drawable/logoicon"-->
+<!--                app:strokeColor="@color/black"-->
+<!--                app:strokeWidth="2dp" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/homeFragmentTopBarProfileText"-->
+<!--                android:layout_width="244dp"-->
+<!--                android:layout_height="52dp"-->
+<!--                android:layout_marginTop="24dp"-->
+<!--                android:text="@string/textview"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textSize="34sp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/homeFragmentTopBarProfileImage"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
+            <EditText
+                android:id="@+id/searchEditText"
+                android:layout_width="278dp"
+                android:layout_height="54dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:drawableEnd="@drawable/baseline_search_24"
+                android:hint="Search for journal"
+                android:textAlignment="center"
+                android:textSize="28sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:shapeAppearanceOverlay="@style/circular"
-                app:srcCompat="@drawable/logoicon"
-                app:strokeColor="@color/black"
-                app:strokeWidth="2dp" />
-
-            <TextView
-                android:id="@+id/homeFragmentTopBarProfileText"
-                android:layout_width="244dp"
-                android:layout_height="52dp"
-                android:layout_marginTop="24dp"
-                android:text="@string/textview"
-                android:textAlignment="center"
-                android:textSize="34sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/homeFragmentTopBarProfileImage"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
