--- a/app/src/main/res/layout/fragment_a_tile.xml
+++ b/app/src/main/res/layout/fragment_a_tile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,64 +9,93 @@
     android:orientation="vertical"
     android:linksClickable="true"
     android:onClick="onLayoutClick_goto_view_tile"
+
     android:focusable="true"
     tools:context=".ATileFragment">
+<!--    android:layout_margin="10dp"-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        app:srcCompat="@drawable/splash" />
-
-    <TextView
-        android:id="@+id/textView4"
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Title"
-        android:textAlignment="center"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:layout_margin="5dp"/>
 
+        android:layout_gravity="fill"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="18dp">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="yyyy-mm-dd"
-        android:layout_margin="5dp"/>
-
-    <!--    <ImageView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content" -->
-    <!--        />-->
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView6"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:gravity="center"-->
-    <!--        android:text="5.0" />-->
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-        <TextView
-            android:id="@+id/textView6"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center"
-            android:text="5.0"
-            android:layout_marginTop="20dp"
-            android:layout_margin="10dp"/>
+            android:orientation="vertical"
+            android:focusable="true">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_star_24"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"/>
-    </LinearLayout>
-</LinearLayout>
+            <ImageView
+                android:id="@+id/imageView_of_a_tile"
+                android:layout_width="316dp"
+                android:layout_height="311dp"
+                app:srcCompat="@drawable/splash" />
+
+            <TextView
+                android:id="@+id/titleView_of_a_tile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:text="Title"
+                android:textAlignment="center"
+                android:textSize="48sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/dateView_of_a_tile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:text="yyyy-mm-dd"
+                android:textSize="16sp" />
+
+            <!--    <ImageView-->
+            <!--        android:layout_width="wrap_content"-->
+            <!--        android:layout_height="wrap_content" -->
+            <!--        />-->
+            <!--    <TextView-->
+            <!--        android:id="@+id/textView6"-->
+            <!--        android:layout_width="wrap_content"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:gravity="center"-->
+            <!--        android:text="5.0" />-->
+
+
+            <LinearLayout
+                android:layout_width="84dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/rateView_of_a_tile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="5.0"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:src="@drawable/baseline_star_24" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
