--- a/app/src/main/res/layout/layout_tiles.xml
+++ b/app/src/main/res/layout/layout_tiles.xml
@@ -1,143 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:gravity="center"
+    >
+<!--        android:layout_gravity="center"-->
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        >
+<!--        android:foregroundGravity="fill"-->
 
         <GridLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:rowCount="5">
-            <!--    android:rowCount="5"-->
-
-
-            <!--tile 0-0-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
-                <!--        android:layout_columnWeight="1"-->
-                <!--        android:layout_rowWeight="1"-->
+            android:layout_gravity="fill"
+            >
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile1"/>
-            </androidx.cardview.widget.CardView>
-
-            <!--tile 0-1-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile2"/>
-            </androidx.cardview.widget.CardView>
-
-
-            <!--tile 1-0-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
-                <!--        android:layout_columnWeight="1"-->
-                <!--        android:layout_rowWeight="1"-->
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile3"/>
-            </androidx.cardview.widget.CardView>
-
-            <!--tile 1-1-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile4"/>
-            </androidx.cardview.widget.CardView>
-
-            <!--tile 2-0-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
-                <!--        android:layout_columnWeight="1"-->
-                <!--        android:layout_rowWeight="1"-->
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile5"/>
-            </androidx.cardview.widget.CardView>
-
-            <!--tile 2-1-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="2"
-                android:layout_column="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile6"/>
-            </androidx.cardview.widget.CardView>
-
-
-            <!--tile 3-0-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="3"
-                android:layout_column="0"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
-                <!--        android:layout_columnWeight="1"-->
-                <!--        android:layout_rowWeight="1"-->
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile7"/>
-            </androidx.cardview.widget.CardView>
-
-            <!--tile 3-1-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="3"
-                android:layout_column="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="18dp">
-
                 <include layout="@layout/fragment_a_tile" android:id="@+id/tile8"/>
-            </androidx.cardview.widget.CardView>
-
         </GridLayout>
     </ScrollView>
 
